Implement caching system in logcli for improved performance. Added options to enable/disable cache, force refresh, and view cache statistics. Updated analyze, security, performance, bot, and search commands to utilize caching for faster log processing. Introduced cache management commands for information retrieval and cleanup of old data.

--- a/.gitignore
+++ b/.gitignore
@@ -272,6 +272,10 @@ error.log.*
 *.sqlite
 *.sqlite3
 
+# Cache data directory
+logcli/data/
+!logcli/data/.gitkeep
+
 # Backup files
 *.bak
 *.backup
