--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    name: Build Multi-Platform Binaries
+    name: Build Linux AMD64
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -43,41 +43,18 @@ jobs:
       
       - name: Build Linux AMD64
         run: |
-          GOOS=linux GOARCH=amd64 go build -ldflags="-s -w -X main.Version=${{ github.ref_name }}" -o hlogcli-linux-amd64 ./cmd/hlogcli
-          chmod +x hlogcli-linux-amd64
-      
-      - name: Build Linux ARM64
-        run: |
-          GOOS=linux GOARCH=arm64 go build -ldflags="-s -w -X main.Version=${{ github.ref_name }}" -o hlogcli-linux-arm64 ./cmd/hlogcli
-          chmod +x hlogcli-linux-arm64
-      
-      - name: Build macOS AMD64 (Intel)
-        run: |
-          GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w -X main.Version=${{ github.ref_name }}" -o hlogcli-darwin-amd64 ./cmd/hlogcli
-          chmod +x hlogcli-darwin-amd64
-      
-      - name: Build macOS ARM64 (Apple Silicon)
-        run: |
-          GOOS=darwin GOARCH=arm64 go build -ldflags="-s -w -X main.Version=${{ github.ref_name }}" -o hlogcli-darwin-arm64 ./cmd/hlogcli
-          chmod +x hlogcli-darwin-arm64
-      
-      - name: Build Windows AMD64
-        run: |
-          GOOS=windows GOARCH=amd64 go build -ldflags="-s -w -X main.Version=${{ github.ref_name }}" -o hlogcli-windows-amd64.exe ./cmd/hlogcli
+          GOOS=linux GOARCH=amd64 go build -ldflags="-s -w -X main.Version=${{ github.ref_name }}" -o hlogcli ./cmd/hlogcli
+          chmod +x hlogcli
       
       - name: Test Linux AMD64 binary
         run: |
-          ./hlogcli-linux-amd64 --version
-          ./hlogcli-linux-amd64 --help
+          ./hlogcli --version
+          ./hlogcli --help
           echo "Linux AMD64 binary tested successfully!"
       
       - name: Create checksums
         run: |
-          sha256sum hlogcli-linux-amd64 > checksums.txt
-          sha256sum hlogcli-linux-arm64 >> checksums.txt
-          sha256sum hlogcli-darwin-amd64 >> checksums.txt
-          sha256sum hlogcli-darwin-arm64 >> checksums.txt
-          sha256sum hlogcli-windows-amd64.exe >> checksums.txt
+          sha256sum hlogcli > checksums.txt
           cat checksums.txt
       
       - name: Upload artifacts
@@ -85,11 +62,7 @@ jobs:
         with:
           name: hlogcli-binaries
           path: |
-            hlogcli-linux-amd64
-            hlogcli-linux-arm64
-            hlogcli-darwin-amd64
-            hlogcli-darwin-arm64
-            hlogcli-windows-amd64.exe
+            hlogcli
             checksums.txt
           retention-days: 90
       
@@ -98,11 +71,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            hlogcli-linux-amd64
-            hlogcli-linux-arm64
-            hlogcli-darwin-amd64
-            hlogcli-darwin-arm64
-            hlogcli-windows-amd64.exe
+            hlogcli
             checksums.txt
           draft: false
           prerelease: false
@@ -110,119 +79,37 @@ jobs:
           body: |
             ## Hypernode Log Analyzer ${{ github.ref_name }}
             
-            ### 📦 Binaries
+            ### Binary
             
-            Download the binary for your platform:
+            Linux x86_64 (AMD64): `hlogcli`
             
-            - **Linux x86_64 (AMD64)**: `hlogcli-linux-amd64`
-            - **Linux ARM64**: `hlogcli-linux-arm64`
-            - **macOS Intel (x86_64)**: `hlogcli-darwin-amd64`
-            - **macOS Apple Silicon (ARM64)**: `hlogcli-darwin-arm64`
-            - **Windows x86_64**: `hlogcli-windows-amd64.exe`
+            ### Installation (Hypernode / Linux)
             
-            ### 🚀 Quick Installation
-            
-            #### Linux/macOS
             ```bash
-            # Download binary (replace VERSION and PLATFORM)
-            wget https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/hlogcli-linux-amd64
-            
-            # Make executable
-            chmod +x hlogcli-linux-amd64
-            
-            # Optional: rename and move to PATH
-            sudo mv hlogcli-linux-amd64 /usr/local/bin/hlogcli
-            
-            # Test
-            hlogcli --version
-            hlogcli --help
+            wget https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/hlogcli
+            chmod +x hlogcli
+            ./hlogcli --version
             ```
             
-            #### macOS (Apple Silicon)
-            ```bash
-            # Download
-            curl -LO https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/hlogcli-darwin-arm64
-            
-            # Make executable
-            chmod +x hlogcli-darwin-arm64
-            
-            # Move to PATH
-            sudo mv hlogcli-darwin-arm64 /usr/local/bin/hlogcli
-            
-            # Remove quarantine attribute (required on macOS)
-            xattr -d com.apple.quarantine /usr/local/bin/hlogcli
-            
-            # Test
-            hlogcli --version
-            ```
-            
-            #### Windows
-            1. Download `hlogcli-windows-amd64.exe`
-            2. Rename to `hlogcli.exe`
-            3. Add to your PATH or run from current directory
-            
-            ### 🔐 Verify Download
+            ### Verify checksum
             
             ```bash
-            # Download checksums
             wget https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/checksums.txt
-            
-            # Verify (Linux/macOS)
             sha256sum -c checksums.txt
             ```
             
-            ### 📖 Usage Examples
+            ### Usage
             
             ```bash
-            # Analyze today's logs
             hlogcli analyze
-            
-            # Security analysis
             hlogcli security --yesterday
-            
-            # Performance analysis with export
-            hlogcli perf --export json -o report.json
-            
-            # Bot analysis
+            hlogcli perf
             hlogcli bots
-            
-            # E-commerce analysis
-            hlogcli ecommerce
-            
-            # Analyze specific log file
-            hlogcli analyze --file /var/log/nginx/access.log
-            
-            # Get help
             hlogcli --help
-            hlogcli analyze --help
             ```
             
-            ### 🎯 Available Commands
+            Full documentation: https://github.com/${{ github.repository }}/blob/${{ github.ref_name }}/README.md
             
-            - `analyze` - Comprehensive log analysis
-            - `security` - Security threat detection
-            - `perf` - Performance analysis
-            - `ecommerce` - E-commerce platform analysis
-            - `bots` - Bot classification and analysis
-            - `api` - API endpoint analysis
-            - `content` - Content type and resource analysis
-            - `anomalies` - Machine learning-based anomaly detection
-            - `search` - Advanced search and filtering
-            
-            ### 📝 Full Documentation
-            
-            See the [README](https://github.com/${{ github.repository }}/blob/${{ github.ref_name }}/README.GO.md) for complete documentation.
-            
-            ### ⚡ Performance
-            
-            Go version benefits:
-            - 100x faster startup (~5ms vs ~500ms)
-            - 10x less memory (~20MB vs ~200MB)
-            - 10x faster processing (100k lines/s vs 10k lines/s)
-            - Single binary, no dependencies
-            
-            ### 🐛 Issues?
-            
-            Report issues at: https://github.com/${{ github.repository }}/issues
+            Report issues: https://github.com/${{ github.repository }}/issues
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
